// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardInput component calls onChange 1`] = `
Array [
  Array [
    SyntheticEvent {
      "_dispatchInstances": null,
      "_dispatchListeners": null,
      "_targetInst": null,
      "bubbles": null,
      "cancelable": null,
      "currentTarget": [Function],
      "defaultPrevented": null,
      "dispatchConfig": null,
      "eventPhase": null,
      "isDefaultPrevented": [Function],
      "isPropagationStopped": [Function],
      "isTrusted": null,
      "nativeEvent": null,
      "target": null,
      "timeStamp": [Function],
      "type": null,
    },
  ],
]
`;

exports[`CardInput component renders as checkbox 1`] = `
<div>
  <div
    class="CardInput"
  >
    <label>
      <input
        class="input"
        name="tileType"
        type="checkbox"
        value="Aerodek Classic"
      />
      <div
        aria-disabled="false"
        class="MuiButtonBase-root ToggleCard card"
        role="button"
        tabindex="0"
      >
        <div
          class="MuiPaper-root MuiCard-root body MuiPaper-elevation1 MuiPaper-rounded"
        >
          <div
            class="image"
            style="background-image: url(path-to-image);"
          />
          <h6
            class="MuiTypography-root title Typography MuiTypography-h6"
          >
            Aerodek Classic
          </h6>
          <p
            class="MuiTypography-root paragraph Typography MuiTypography-body1"
          >
            6 colours 
          </p>
        </div>
        <span
          class="MuiTouchRipple-root"
        />
      </div>
    </label>
  </div>
</div>
`;

exports[`CardInput component renders correctly 1`] = `
<div>
  <div
    class="CardInput"
  >
    <label>
      <input
        class="input"
        name="tileType"
        type="radio"
        value="Aerodek Classic"
      />
      <div
        aria-disabled="false"
        class="MuiButtonBase-root ToggleCard card"
        role="button"
        tabindex="0"
      >
        <div
          class="MuiPaper-root MuiCard-root body MuiPaper-elevation1 MuiPaper-rounded"
        >
          <div
            class="image"
            style="background-image: url(path-to-image);"
          />
          <h6
            class="MuiTypography-root title Typography MuiTypography-h6"
          >
            Aerodek Classic
          </h6>
          <p
            class="MuiTypography-root paragraph Typography MuiTypography-body1"
          >
            6 colours 
          </p>
        </div>
        <span
          class="MuiTouchRipple-root"
        />
      </div>
    </label>
  </div>
</div>
`;
